feat: complete phase one procurement frontend
